Коментує всі секції крім Хедеру

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 </ul>
             </nav>
 
+            <button type="button">
+                <svg>
+                    <use></use>
+                </svg>
+            </button>
+
                 <ul class="contacts list">
 
                     <li class="contacts__item">
@@ -54,13 +60,13 @@
 
     <main>
         <!-- Послуга -->
-        <section class="service">
+        <!-- <section class="service">
                 <h1 class="service__title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="service__btn" data-modal-open>Замовити послугу</button>
-        </section>
+        </section> -->
 
         <!-- Особливості -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
                 <h2 class="section-title visually-hidden">Особливості</h2>
 
@@ -108,10 +114,10 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Чим ми займаємося -->
-        <section class="section work">
+        <!-- <section class="section work">
             <div class="container">
                 <h2 class="section-title">Чим ми займаємося</h2>
 
@@ -140,10 +146,10 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Наша команда -->
-        <section class="section team__section">
+        <!-- <section class="section team__section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 
@@ -339,10 +345,10 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Постійні клієнти -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
                 <h2 class="section-title">Постійні клієнти</h2>
 
@@ -412,10 +418,10 @@
 
             </div>
         </section>
-    </main>
+    </main> -->
 
     <!-- Підвал -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer__container">
             <div class="address__card-thumb">
                 <a href="./index.html" lang="en" class="logo">Web<span class="logo logo_light">Studio</span></a>
@@ -490,8 +496,8 @@
 
         </div>
     </footer>
-
-    <div class="backdrop is-hidden" data-modal>
+ -->
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal__btn_close" data-modal-close>
                 <svg class="modal__close-icon" width="18px" height="18px">
@@ -549,9 +555,9 @@
             </form>
 
         </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
     
 </body>
 </html>
