--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </ul>
             </nav>
 
-            <button type="button">
-                <svg>
-                    <use></use>
+            <button type="button" class="mobile-burger-btn">
+                <svg class="mobile-burger-btn__icon">
+                    <use href="./images/icons.svg#icon-mobile-burger"></use>
                 </svg>
             </button>
 
@@ -55,10 +55,46 @@
                     </li>
 
                 </ul>
+
+            <div class="mobile-menu">
+                <div class="container mobile-menu__container">
+
+                    <button type="button" class="mobile-menu__close-btn">
+                        <svg class="mobile-menu__close-icon">
+                            <use href="./images/icons.svg#icon-close"></use>
+                        </svg>
+                    </button>
+
+                    <ul class="mobile-nav list">
+                        <li class="mobile-nav__item"><a href="#" class="mobile-nav__link mobile-nav__link_current">Студія</a></li>
+                        <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link">Портфоліо</a></li>
+                        <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакти</a></li>
+                    </ul>
+
+                    <ul class="mobile-contacts list">
+
+                        <li class="mobile-contacts__item">
+                            <a href="mailto:info@devstudio.com" class="mobile-contacts__link mobile-contacts__link_right">
+                            info@devstudio.com
+                            </a>
+                        </li>
+
+                        <li class="mobile-contacts__item">
+                            <a href="tel:+380961111111" class="mobile-contacts__link">
+                            +38 096 111 11 11
+                            </a>
+                        </li>
+
+                    </ul>
+
+
+
+                </div>
+            </div>
         </div>
     </header>
 
-    <main>
+    <!-- <main> -->
         <!-- Послуга -->
         <!-- <section class="service">
                 <h1 class="service__title">Ефективні рішення для вашого бізнесу</h1>
