Додає контент в Мобільне меню

--- a/index.html
+++ b/index.html
@@ -71,20 +71,36 @@
                         <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакти</a></li>
                     </ul>
 
+
                     <ul class="mobile-contacts list">
 
                         <li class="mobile-contacts__item">
-                            <a href="mailto:info@devstudio.com" class="mobile-contacts__link mobile-contacts__link_right">
-                            info@devstudio.com
-                            </a>
-                        </li>
-
-                        <li class="mobile-contacts__item">
-                            <a href="tel:+380961111111" class="mobile-contacts__link">
+                            <a href="tel:+380961111111" class="mobile-contacts__link mobile-contacts__link_accent">
                             +38 096 111 11 11
                             </a>
                         </li>
 
+                        <li class="mobile-contacts__item">
+                            <a href="mailto:info@devstudio.com" class="mobile-contacts__link">
+                            info@devstudio.com
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="mobile-social-list list">
+                        <li class="mobile-social-list__item">
+                            <a href="#" class="mobile-social-list__link">Instagram</a>
+                        </li>
+                        <li class="mobile-social-list__item">
+                            <a href="#" class="mobile-social-list__link">Twitter</a>
+                        </li>
+                        <li class="mobile-social-list__item">
+                            <a href="#" class="mobile-social-list__link">Facebook</a>
+                        </li>
+                        <li class="mobile-social-list__item">
+                            <a href="#" class="mobile-social-list__link">LinkedIn</a>
+                        </li>
                     </ul>
 
 
