--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </ul>
             </nav>
 
-            <button type="button" class="mobile-burger-btn">
-                <svg class="mobile-burger-btn__icon">
+            <button type="button" class="mobile-burger-btn js-open-menu">
+                <svg class="mobile-burger-btn__icon" lang="en" aria-label="burger icon">
                     <use href="./images/icons.svg#icon-mobile-burger"></use>
                 </svg>
             </button>
@@ -38,7 +38,7 @@
 
                     <li class="contacts__item">
                         <a href="mailto:info@devstudio.com" class="contacts__link contacts__link_right">
-                            <svg class="mail-icon" lang="en" aria-label="mail icon" width="16px" height="12px">
+                            <svg class="mail-icon" lang="en" aria-label="mail icon">
                                 <use href="./images/icons.svg#icon-mail"></use>
                             </svg>
                         info@devstudio.com
@@ -47,7 +47,7 @@
 
                     <li class="contacts__item">
                         <a href="tel:+380961111111" class="contacts__link">
-                            <svg class="smartphone-icon" lang="en" aria-label="smartphone icon" width="10px" height="16px">
+                            <svg class="smartphone-icon" lang="en" aria-label="smartphone icon">
                                 <use href="./images/icons.svg#icon-smartphone"></use>
                             </svg>
                         +38 096 111 11 11
@@ -56,21 +56,24 @@
 
                 </ul>
 
-            <div class="mobile-menu">
+            <div class="mobile-menu js-menu-container">
                 <div class="container mobile-menu__container">
 
-                    <button type="button" class="mobile-menu__close-btn">
-                        <svg class="mobile-menu__close-icon">
+                    <button type="button" class="mobile-menu__close-btn js-close-menu">
+                        <svg class="mobile-menu__close-icon" lang="en" aria-label="close icon">
                             <use href="./images/icons.svg#icon-close"></use>
                         </svg>
                     </button>
 
-                    <ul class="mobile-nav list">
-                        <li class="mobile-nav__item"><a href="#" class="mobile-nav__link mobile-nav__link_current">Студія</a></li>
-                        <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link">Портфоліо</a></li>
-                        <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакти</a></li>
-                    </ul>
+                    <nav class="mobile-nav">
+                        <ul class="mobile-nav__list list">
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link mobile-nav__link_current">Студія</a></li>
+                            <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link">Портфоліо</a></li>
+                            <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакти</a></li>
+                        </ul>
+                    </nav>
 
+                    <div class="mobile-contactssss">
 
                     <ul class="mobile-contacts list">
 
@@ -102,6 +105,8 @@
                             <a href="#" class="mobile-social-list__link">LinkedIn</a>
                         </li>
                     </ul>
+
+                    </div>
 
 
 
@@ -609,6 +614,7 @@
         </div>
     </div> -->
 
+    <script src="./js/mobile-menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
     
 </body>
