Вносить зміни по верстці в секцію Сервіс

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         </div>
     </header>
 
-    <!-- <main> -->
+    <main>
         <!-- Послуга -->
-        <!-- <section class="service">
+        <section class="service">
                 <h1 class="service__title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="service__btn" data-modal-open>Замовити послугу</button>
-        </section> -->
+        </section>
 
         <!-- Особливості -->
         <!-- <section class="section">
@@ -474,8 +474,8 @@
                 </ul>
 
             </div>
-        </section>
-    </main> -->
+        </section> -->
+    </main>
 
     <!-- Підвал -->
     <!-- <footer class="footer">
