Вносить зміни по верстці в секціях - Особливості, Чим займаємося, Наша команда

--- a/index.html
+++ b/index.html
@@ -73,42 +73,38 @@
                         </ul>
                     </nav>
 
-                    <div class="mobile-contactssss">
+                    <div class="mobile-lists">
+                        <ul class="mobile-contacts list">
 
-                    <ul class="mobile-contacts list">
+                            <li class="mobile-contacts__item">
+                                <a href="tel:+380961111111" class="mobile-contacts__link mobile-contacts__link_accent">
+                                +38 096 111 11 11
+                                </a>
+                            </li>
 
-                        <li class="mobile-contacts__item">
-                            <a href="tel:+380961111111" class="mobile-contacts__link mobile-contacts__link_accent">
-                            +38 096 111 11 11
-                            </a>
-                        </li>
+                            <li class="mobile-contacts__item">
+                                <a href="mailto:info@devstudio.com" class="mobile-contacts__link">
+                                info@devstudio.com
+                                </a>
+                            </li>
 
-                        <li class="mobile-contacts__item">
-                            <a href="mailto:info@devstudio.com" class="mobile-contacts__link">
-                            info@devstudio.com
-                            </a>
-                        </li>
+                        </ul>
 
-                    </ul>
-
-                    <ul class="mobile-social-list list">
-                        <li class="mobile-social-list__item">
-                            <a href="#" class="mobile-social-list__link">Instagram</a>
-                        </li>
-                        <li class="mobile-social-list__item">
-                            <a href="#" class="mobile-social-list__link">Twitter</a>
-                        </li>
-                        <li class="mobile-social-list__item">
-                            <a href="#" class="mobile-social-list__link">Facebook</a>
-                        </li>
-                        <li class="mobile-social-list__item">
-                            <a href="#" class="mobile-social-list__link">LinkedIn</a>
-                        </li>
-                    </ul>
-
+                        <ul class="mobile-social-list list">
+                            <li class="mobile-social-list__item">
+                                <a href="#" class="mobile-social-list__link">Instagram</a>
+                            </li>
+                            <li class="mobile-social-list__item">
+                                <a href="#" class="mobile-social-list__link">Twitter</a>
+                            </li>
+                            <li class="mobile-social-list__item">
+                                <a href="#" class="mobile-social-list__link">Facebook</a>
+                            </li>
+                            <li class="mobile-social-list__item">
+                                <a href="#" class="mobile-social-list__link">LinkedIn</a>
+                            </li>
+                        </ul>
                     </div>
-
-
 
                 </div>
             </div>
@@ -123,7 +119,7 @@
         </section>
 
         <!-- Особливості -->
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
                 <h2 class="section-title visually-hidden">Особливості</h2>
 
@@ -171,10 +167,10 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Чим ми займаємося -->
-        <!-- <section class="section work">
+        <section class="section work">
             <div class="container">
                 <h2 class="section-title">Чим ми займаємося</h2>
 
@@ -182,31 +178,37 @@
 
                     <li class="work__item">
                         <div class="work__card">
-                            <img src="images/mainpage/work1.jpg" alt="Десктопний додаток" width="370" height="294">
+                            <img srcset="./images/mainpage/work/work1@2x.jpg 2x" 
+                            src="images/mainpage/work/work1.jpg" 
+                            alt="Десктопний додаток" width="370" height="294">
                             <p class="work__text">Десктопні додатки</p>
                         </div>
                     </li>
 
                     <li class="work__item">
                         <div class="work__card">
-                            <img src="images/mainpage/work2.jpg" alt="Мобільний додаток" width="370" height="294">
+                            <img srcset="./images/mainpage/work/work2@2x.jpg 2x" 
+                            src="images/mainpage/work/work2.jpg" 
+                            alt="Мобільний додаток" width="370" height="294">
                             <p class="work__text">Мобільні додатки</p>
                         </div>
                     </li>
 
                     <li class="work__item">
                         <div class="work__card">
-                            <img src="images/mainpage/work3.jpg" alt="Дизайнерські рішення" width="370" height="294">
+                            <img srcset="./images/mainpage/work/work3@2x.jpg 2x"
+                            src="images/mainpage/work/work3.jpg" 
+                            alt="Дизайнерські рішення" width="370" height="294">
                             <p class="work__text">Дизайнерські рішення</p>
                         </div>
                     </li>
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Наша команда -->
-        <!-- <section class="section team__section">
+        <section class="section team__section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 
@@ -214,7 +216,36 @@
 
                     <li class="team__item">
                         <div>
-                            <img src="images/mainpage/member1.jpg" alt="Чоловік з бородою в окулярах" width="270" height="260">
+                            <picture>
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member1-desktop.webp 1x, ./images/mainpage/member/desktop/member1-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member1-desktop.jpg 1x, ./images/mainpage/member/desktop/member1-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member1-tablet.webp 1x, ./images/mainpage/member/tablet/member1-tablet@2x.webp 2x"
+                                media="(min-width: 768px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member1-tablet.jpg 1x, ./images/mainpage/member/tablet/member1-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member1-mobile.webp 1x, ./images/mainpage/member/mobile/member1-mobile@2x.webp 2x"
+                                media="(max-width: 767px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member1-mobile.jpg 1x, ./images/mainpage/member/mobile/member1-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+
+                                <img src="images/mainpage/member/mobile/member1-mobile.jpg" alt="Чоловік з бородою в окулярах">
+                            </picture>
                         </div>
 
                         <div class="team__card-content">
@@ -261,7 +292,36 @@
 
                     <li class="team__item">
                         <div>
-                            <img src="images/mainpage/member2.jpg" alt="Жінка блондинка в окулярах" width="270" height="260">
+                            <picture>
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member2-desktop.webp 1x, ./images/mainpage/member/desktop/member2-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member2-desktop.jpg 1x, ./images/mainpage/member/desktop/member2-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member2-tablet.webp 1x, ./images/mainpage/member/tablet/member2-tablet@2x.webp 2x"
+                                media="(min-width: 768px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member2-tablet.jpg 1x, ./images/mainpage/member/tablet/member2-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member2-mobile.webp 1x, ./images/mainpage/member/mobile/member2-mobile@2x.webp 2x"
+                                media="(max-width: 767px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member2-mobile.jpg 1x, ./images/mainpage/member/mobile/member2-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                
+                                <img src="images/mainpage/member/mobile/member2-mobile.jpg" alt="Жінка блондинка в окулярах">
+                            </picture>
                         </div>
 
                         <div class="team__card-content">
@@ -308,7 +368,36 @@
 
                     <li class="team__item">
                         <div>
-                            <img src="images/mainpage/member3.jpg" alt="Чоловік з бородою" width="270" height="260">
+                            <picture>
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member3-desktop.webp 1x, ./images/mainpage/member/desktop/member3-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member3-desktop.jpg 1x, ./images/mainpage/member/desktop/member3-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member3-tablet.webp 1x, ./images/mainpage/member/tablet/member3-tablet@2x.webp 2x"
+                                media="(min-width: 768px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member3-tablet.jpg 1x, ./images/mainpage/member/tablet/member3-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member3-mobile.webp 1x, ./images/mainpage/member/mobile/member3-mobile@2x.webp 2x"
+                                media="(max-width: 767px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member3-mobile.jpg 1x, ./images/mainpage/member/mobile/member3-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+
+                                <img src="images/mainpage/member/mobile/member3-mobile.jpg" alt="Чоловік з бородою">
+                            </picture>
                         </div>
 
                         <div class="team__card-content">
@@ -355,7 +444,36 @@
 
                     <li class="team__item">
                         <div>
-                            <img src="images/mainpage/member4.jpg" alt="Чоловік з бородою в окулярах" width="270" height="260">
+                            <picture>
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member4-desktop.webp 1x, ./images/mainpage/member/desktop/member4-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/desktop/member4-desktop.jpg 1x, ./images/mainpage/member/desktop/member4-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member4-tablet.webp 1x, ./images/mainpage/member/tablet/member4-tablet@2x.webp 2x"
+                                media="(min-width: 768px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/tablet/member4-tablet.jpg 1x, ./images/mainpage/member/tablet/member4-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member4-mobile.webp 1x, ./images/mainpage/member/mobile/member4-mobile@2x.webp 2x"
+                                media="(max-width: 767px)"
+                                type="image/webp">
+
+                                <source 
+                                srcset="./images/mainpage/member/mobile/member4-mobile.jpg 1x, ./images/mainpage/member/mobile/member4-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+
+                                <img src="images/mainpage/member/mobile/member4-mobile.jpg" alt="Чоловік з бородою в окулярах">
+                            </picture>
                         </div>
 
                         <div class="team__card-content">
@@ -402,7 +520,7 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Постійні клієнти -->
         <!-- <section class="section">
