Вносить зміни по верстці Постійні клієнти

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         </section>
 
         <!-- Постійні клієнти -->
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
                 <h2 class="section-title">Постійні клієнти</h2>
 
@@ -592,7 +592,7 @@
                 </ul>
 
             </div>
-        </section> -->
+        </section>
     </main>
 
     <!-- Підвал -->
