--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
     </main>
 
     <!-- Підвал -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer__container">
             <div class="address__card-thumb">
                 <a href="./index.html" lang="en" class="logo">Web<span class="logo logo_light">Studio</span></a>
@@ -671,7 +671,7 @@
 
         </div>
     </footer>
- -->
+
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal__btn_close" data-modal-close>
