Вносить зміни по верстці в Модальне вікно

--- a/index.html
+++ b/index.html
@@ -676,7 +676,8 @@
         </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <!-- Модальне вікно -->
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal__btn_close" data-modal-close>
                 <svg class="modal__close-icon" width="18px" height="18px">
@@ -734,10 +735,10 @@
             </form>
 
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     
 </body>
 </html>
