Наводить красу по верстці ;))

--- a/index.html
+++ b/index.html
@@ -728,7 +728,9 @@
                     <svg class="modal-form__check-icon">
                         <use class="modal-form__check-icon_vector" href="./images/icons.svg#icon-check"></use>
                     </svg>
-                    Погоджуюся з розсилкою та приймаю&nbsp;<a href="#" class="modal-form-check-link" >Умови договору</a> 
+                    <p>Погоджуюся з розсилкою та приймаю&nbsp;
+                        <a href="#" class="modal-form-check-link" >Умови договору</a>
+                    </p>
                 </label>
                 
                 <button class="modal__btn_submit" type="submit">Відправити</button>
